--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>WorldGym</title>
+    <title>GYM ADMIN</title>
     <!-- Custom fonts for this template-->
     <link href="./css/all.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -24,11 +24,11 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center modules" enlace="inicio.html" href="#">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-dumbbell"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">WorldGym</div>
+                <div class="sidebar-brand-text mx-3" id="empresa">GYM ADMIN</div>
             </a>
 
             <!-- Divider -->
@@ -36,7 +36,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link modules" enlace="inicio.html" href="#">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Inicio</span></a>
             </li>
@@ -53,9 +53,9 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href="#">Registrar Cliente</a>
+                        <a class="collapse-item" href="#">Planes</a>
+                        <a class="collapse-item" href="#">Listado Clientes</a>
                     </div>
                 </div>
             </li>
@@ -70,11 +70,12 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
+                        <a class="collapse-item modules" enlace="newProduct.html">Nuevo</a>
+                        <a class="collapse-item" href="#">Lista</a>
+                        <a class="collapse-item" href="#">Venta</a>
+                        <a class="collapse-item" href="#">Ingreso</a>
+                        <a class="collapse-item" href="#">Proveedores</a>
+                        <a class="collapse-item" href="#">Categorias</a>
                     </div>
                 </div>
             </li>
