--- a/src/ui/pages/newProduct.html
+++ b/src/ui/pages/newProduct.html
@@ -1,6 +1,6 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Inicio</h1>
+    <h1 class="h3 mb-0 text-gray-800">Nuevo Producto</h1>
 </div>
 
 <!-- Content Row -->
