Avances proceso post

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -74,8 +74,8 @@
                         <a class="collapse-item" href="#">Lista</a>
                         <a class="collapse-item" href="#">Venta</a>
                         <a class="collapse-item" href="#">Ingreso</a>
-                        <a class="collapse-item" href="#">Proveedores</a>
-                        <a class="collapse-item" href="#">Categorias</a>
+                        <a class="collapse-item modules" enlace="suppliers.html" href="#">Proveedores</a>
+                        <a class="collapse-item modules" enlace="categories.html" href="#">Categorías</a>
                     </div>
                 </div>
             </li>
@@ -226,6 +226,15 @@
             </div>
         </div>
     </div>
+
+    <div id="Modal" class="modal fade text-center"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+
+			</div>
+		</div>
+    </div>
+    
     <script>window.$ = window.jQuery = require('jquery');</script>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/sb-admin-2.min.js"></script>
