Ingreso de productos, lista productos, ingreso de pedidos

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -70,10 +70,10 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item modules" enlace="newProduct.html">Nuevo</a>
-                        <a class="collapse-item" href="#">Lista</a>
+                        <a class="collapse-item openModal" enlace="newProduct.html" href="#">Nuevo</a>
+                        <a class="collapse-item modules" enlace="products.html" href="#">Lista</a>
                         <a class="collapse-item" href="#">Venta</a>
-                        <a class="collapse-item" href="#">Ingreso</a>
+                        <a class="collapse-item openModalIngreso" enlace="entry.html" href="#">Ingreso de Pedidos</a>
                         <a class="collapse-item modules" enlace="suppliers.html" href="#">Proveedores</a>
                         <a class="collapse-item modules" enlace="categories.html" href="#">Categorías</a>
                     </div>
@@ -227,8 +227,8 @@
         </div>
     </div>
 
-    <div id="Modal" class="modal fade text-center"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
+    <div id="Modal" class="modal fade bd-example-modal-lg"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 
 			</div>
