--- a/src/ui/pages/products.html
+++ b/src/ui/pages/products.html
@@ -21,9 +21,9 @@
                         <th>ID</th>
                         <th>Nombre</th>
                         <th>Descripcion</th>
-                        <th>Stock</th>
-                        <th>Costo</th>
-                        <th>PrecioVenta</th>
+                        <th>Cantidad Disponible</th>
+                        <th>Precio de Compra</th>
+                        <th>Precio de Venta</th>
                         <th>Categoria</th>
                         <th>Estado</th>
                         <th>Acciones</th>
