--- a/src/ui/pages/newProduct.html
+++ b/src/ui/pages/newProduct.html
@@ -1,41 +1,45 @@
-<!-- Page Heading -->
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Nuevo Producto</h1>
+<div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLabel">Nuevo Producto</h5>
+    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">×</span>
+    </button>
 </div>
-
-<!-- Content Row -->
-<div class="row">
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-primary shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xl font-weight-bold text-primary text-uppercase mb-1">
-                            Nueva Venta
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            <i class="fas fa-cart-plus fa-4x text-gray-300"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="modal-body">
+    <form id="new">
+        <div class="form-group row">
+            <label for="nombre" class="col-sm-3 col-form-label">Nombre</label>
+            <input type="text" style="margin-top: 3px;" name="nombre" id="nombre" class="form-control form-control-sm col-sm-8" placeholder="Nombre">
         </div>
-    </div>
 
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-success shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xl font-weight-bold text-success text-uppercase mb-1">
-                            Ingreso
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            <i class="fas fa-user-check fa-4x text-gray-300"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="form-group row">
+            <label for="descripcion" class="col-sm-3 col-form-label">Descripción</label>
+            <textarea name="descripcion" id="descripcion" class="form-control form-control-sm col-sm-8" placeholder="Descripción"></textarea>
         </div>
-    </div>
+
+        <div class="form-group row">
+            <label for="stock" class="col-sm-3 col-form-label">Cantidad Disponible</label>
+            <input type="number" style="margin-top: 14px;" name="stock" id="stock" class="form-control form-control-sm col-sm-8" placeholder="Cantidad Disponible">
+        </div>
+
+        <div class="form-group row">
+            <label for="costo" class="col-sm-3 col-form-label">Precio de Compra</label>
+            <input type="number" style="margin-top: 14px;" name="costo" id="costo" class="form-control form-control-sm col-sm-8" placeholder="Precio de Compra">
+        </div>
+
+        <div class="form-group row">
+            <label for="precio_venta" class="col-sm-3 col-form-label">Precio de Venta</label>
+            <input type="number" style="margin-top: 14px;" name="precio_venta" id="precio_venta" class="form-control form-control-sm col-sm-8" placeholder="Precio de Venta">
+        </div>
+
+        <div class="form-group row">
+            <label for="categoria" class="col-sm-3 col-form-label">Categoría</label>
+            <select style="margin-top: 3px;" name="categoria" id="categoria" class="form-control form-control-sm col-sm-8">
+                <option value="">Seleccione...</option>
+            </select>
+        </div>
+    </form>
+</div>
+<div class="modal-footer border-bottom-primary">
+    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+    <a class="btn btn-primary" id="guardar">Guardar</a>
 </div>
