--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -72,7 +72,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item openModal" enlace="newProduct.html" href="#">Nuevo</a>
                         <a class="collapse-item modules" enlace="products.html" href="#">Lista</a>
-                        <a class="collapse-item" href="#">Venta</a>
+                        <a class="collapse-item openModalVenta" enlace="sale.html" href="#">Registrar Venta</a>
                         <a class="collapse-item openModalIngreso" enlace="entry.html" href="#">Ingreso de Pedidos</a>
                         <a class="collapse-item modules" enlace="suppliers.html" href="#">Proveedores</a>
                         <a class="collapse-item modules" enlace="categories.html" href="#">Categorías</a>
