Reporte de ventas

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -117,7 +117,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="">Usuarios</a>
                         <a class="collapse-item" href="">Mensualidades</a>
-                        <a class="collapse-item" href="">Ventas</a>
+                        <a class="collapse-item modules" enlace="salesReport.html" href="#">Ventas</a>
                         <a class="collapse-item" href="">Ingeso Productos</a>
                     </div>
                 </div>
