Reporte de ingresos e impresion de facturas

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -118,7 +118,7 @@
                         <a class="collapse-item" href="">Usuarios</a>
                         <a class="collapse-item" href="">Mensualidades</a>
                         <a class="collapse-item modules" enlace="salesReport.html" href="#">Ventas</a>
-                        <a class="collapse-item" href="">Ingeso Productos</a>
+                        <a class="collapse-item modules" enlace="entrysReport.html" href="#">Ingresos</a>
                     </div>
                 </div>
             </li>
@@ -229,7 +229,7 @@
 
     <div id="Modal" class="modal fade bd-example-modal-lg"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
-			<div class="modal-content">
+			<div class="modal-content" id="contenido_modal">
 
 			</div>
 		</div>
