--- a/src/ui/pages/productsList.html
+++ b/src/ui/pages/productsList.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="table-responsive">
-            <table class="table table-striped table-bordered dt-responsive nowrap" id="dataTableProducts" width="100%" cellspacing="0">
+            <table class="table table-striped table-bordered dt-responsive nowrap" id="dataTableProducts" width="100%" cellspacing="0" border="1">
                 <thead>
                     <tr>
                         <th>ID</th>
@@ -41,6 +41,7 @@
 </div>
 <div class="modal-footer border-bottom-primary">
     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cerrar</button>
+    <button class="btn btn-secondary" type="button" id="current">Factura</button>
 </div>
 
 
