--- a/src/ui/pages/expenseCategories.html
+++ b/src/ui/pages/expenseCategories.html
@@ -1,12 +1,12 @@
 <!-- Page Heading -->
-<h1 class="h3 mb-2 text-gray-800">Proveedores</h1> 
+<h1 class="h3 mb-2 text-gray-800">Categorías de los Gastos</h1> 
 <p class="mb-4">
-    Lista de los diferentes proveedores que se podran seleccionar en las compras.
+    Listado de categorías a las que puede pertenecer un gasto.
 </p>
 <!-- DataTales Example -->
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary"><buttom id="create" class="btn btn-success btn-sm">Nuevo</buttom></h6>
+        <h6 class="m-0 font-weight-bold text-primary"><buttom id="create" class="btn btn-success btn-sm">Nueva</buttom></h6>
     </div>
     <div class="card-body">
         <div class="table-responsive">
@@ -15,10 +15,6 @@
                     <tr>
                         <th>ID</th>
                         <th>Nombre</th>
-                        <th>Nit</th>
-                        <th>Dirección</th>
-                        <th>Email</th>
-                        <th>Teléfono</th>
                         <th>Estado</th>
                         <th>Acciones</th>
                     </tr>
@@ -30,4 +26,4 @@
 
 <!-- Page level plugins -->
 <script src="./js/sb-admin-2.min.js"></script>
-<script src="./js/suppliers.js"></script>
+<script src="./js/expenseCategories.js"></script>
