--- a/src/ui/pages/newProduct.html
+++ b/src/ui/pages/newProduct.html
@@ -1,45 +1,87 @@
+<link href="./css/newProduct.css" rel="stylesheet" type="text/css">
 <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">Nuevo Producto</h5>
     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">×</span>
     </button>
 </div>
 <div class="modal-body">
-    <form id="new">
-        <div class="form-group row">
-            <label for="nombre" class="col-sm-3 col-form-label">Nombre</label>
-            <input type="text" style="margin-top: 3px;" name="nombre" id="nombre" class="form-control form-control-sm col-sm-8" placeholder="Nombre">
-        </div>
 
-        <div class="form-group row">
-            <label for="descripcion" class="col-sm-3 col-form-label">Descripción</label>
-            <textarea name="descripcion" id="descripcion" class="form-control form-control-sm col-sm-8" placeholder="Descripción"></textarea>
-        </div>
+    <div class="card-body p-0">
+        <!-- Nested Row within Card Body -->
+        <div class="row">
+            <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+            <div class="col-lg-7">
+                <div class="p-5">
+                    <div class="text-center">
+                        <h1 class="h4 text-gray-900 mb-4">Producto!</h1>
+                    </div>
+                    <form class="user" id="form">
+                        <div class="form-group">
+                            <select name="categoria_idcategoria" class="form-control form-control-user select"
+                                placeholder="Categoría" required>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control form-control-user" name="nombre" placeholder="Nombre"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control form-control-user" name="descripcion"
+                                placeholder="Descripción"></textarea>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-3 mb-3 mb-sm-0">
+                                <legend>Tipo</legend>
+                            </div>
+                            <div class="col-sm-4 mb-4 mb-sm-0 radio">
+                                <label class="">Simple</label>
+                                <input type="radio" class="form-control-user" name="tipo" value="simple" required>
+                            </div>
+                            <div class="col-sm-5 mb-5 mb-sm-0 radio">
+                                <label class="">Compuesto</label>
+                                <input type="radio" class="form-control-user" name="tipo" value="compuesto" required>
+                            </div>
+                        </div>
+                        <div class="form-group" id="insumos">
+                            <div class="row">
+                                <div class="col-lg-1">
+                                    <button type="button" id="newSupply" class="newSupply btn btn-warning btn-sm">
+                                        <i class="fas fa-plus"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered dt-responsive nowrap" id="dataTableSupply" width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Insumo</th>
+                                            <th>Cant</th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                        </div>
+                        
+                        <div class="form-group row" id="stock">
+                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                <input type="number" min="0" class="form-control form-control-user" name="stock" placeholder="Stock" required>
+                            </div>
+                        </div>
 
-        <div class="form-group row">
-            <label for="stock" class="col-sm-3 col-form-label">Cantidad Disponible</label>
-            <input type="number" style="margin-top: 14px;" name="stock" id="stock" class="form-control form-control-sm col-sm-8" placeholder="Cantidad Disponible">
-        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control form-control-user" name="precio_venta" id="precio_venta" placeholder="Precio de Venta" required>
+                        </div>
 
-        <div class="form-group row">
-            <label for="costo" class="col-sm-3 col-form-label">Precio de Compra</label>
-            <input type="number" style="margin-top: 14px;" name="costo" id="costo" class="form-control form-control-sm col-sm-8" placeholder="Precio de Compra">
+                        <button id="guardar" type="submit" class="btn btn-primary btn-user btn-block">
+                            Crear Producto
+                        </button>
+                        <hr>
+                    </form>
+                </div>
+            </div>
         </div>
+    </div>
 
-        <div class="form-group row">
-            <label for="precio_venta" class="col-sm-3 col-form-label">Precio de Venta</label>
-            <input type="number" style="margin-top: 14px;" name="precio_venta" id="precio_venta" class="form-control form-control-sm col-sm-8" placeholder="Precio de Venta">
-        </div>
-
-        <div class="form-group row">
-            <label for="categoria" class="col-sm-3 col-form-label">Categoría</label>
-            <select style="margin-top: 3px;" name="categoria" id="categoria" class="form-control form-control-sm col-sm-8">
-                <option value="">Seleccione...</option>
-            </select>
-        </div>
-    </form>
 </div>
-<div class="modal-footer border-bottom-primary">
-    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-    <a class="btn btn-primary" id="guardar">Guardar</a>
-</div>
+<script src="./js/newProduct.js"></script>
