Ajustes finales de vnt

--- a/src/ui/pages/factura.html
+++ b/src/ui/pages/factura.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="ticket">
-        <center><img src="../img/gym.png" style="width: 130px;" alt="Logotipo"></center>
+        <center><img src="../img/logo.png" style="width: 130px;" alt="Logotipo"></center>
         <p class="centrado" id="encabezado"></p>
         <table>
             <thead>
