--- a/src/ui/pages/products.html
+++ b/src/ui/pages/products.html
@@ -18,10 +18,10 @@
                         <th>Nombre</th>
                         <th>Descripción</th>
                         <th>Tipo</th>
-                        <th>Cantidad Disponible</th>
-                        <th>Precio de Venta</th>
+                        <th>Disponible</th>
+                        <th>$ Venta</th>
                         <th>Estado</th>
-                        <th>Acciones</th>
+                        <th>Acción</th>
                     </tr>
                 </thead>
             </table>
