--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -26,7 +26,7 @@
     <!-- Page Wrapper -->
     <div id="wrapper">
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-pos sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center modules" enlace="inicio.html"
@@ -51,7 +51,7 @@
             <hr class="sidebar-divider">
 
             <li class="nav-item">
-                <a class="nav-link openModalVenta" enlace="sale.html" href="#">
+                <a class="nav-link openModal" enlace="sale.html" href="#">
                     <i class="fas fa-cart-plus"></i>
                     <span>Nueva Venta</span>
                 </a>
@@ -128,7 +128,7 @@
                 <div id="collapseReports" class="collapse" aria-labelledby="headingPages"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="">Inventario</a>
+                        <a class="collapse-item modules" enlace="inventory.html" href="#">Inventario</a>
                         <a class="collapse-item" href="">Costos</a>
                         <a class="collapse-item" href="">Gatos</a>
                         <a class="collapse-item" href="">Utilidades</a>
@@ -151,7 +151,7 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-gradient-primary topbar mb-4 static-top shadow"
+                <nav class="navbar navbar-expand navbar-light bg-pos topbar mb-4 static-top shadow"
                     style="text-align: center;">
                     <span style="width: 80%; font-size: 30px; color: white;" aling="center" id="slogan">Slogan</span>
                 </nav>
@@ -170,7 +170,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; POS 2021</span>
                     </div>
                 </div>
             </footer>
@@ -187,9 +187,9 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <div id="Modal" class="modal fade bd-example-modal-lg" role="dialog" aria-labelledby="exampleModalLabel"
+    <div id="Modal" class="modal fade bd-example-modal-xl" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content" id="contenido_modal">
 
             </div>
