--- a/src/ui/pages/inicio.html
+++ b/src/ui/pages/inicio.html
@@ -1,41 +1,10 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Inicio</h1>
+    <h1 class="h3 mb-0 text-gray-800">Mesas</h1>
 </div>
 
-<!-- Content Row -->
-<div class="row">
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-primary shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xl font-weight-bold text-primary text-uppercase mb-1">
-                            Nueva Venta
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            <i class="fas fa-cart-plus fa-4x text-gray-300"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-success shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xl font-weight-bold text-success text-uppercase mb-1">
-                            Ingreso
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            <i class="fas fa-user-check fa-4x text-gray-300"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="menu_mesas">
+    <!-- Content Row -->
 </div>
+
+<script src="./js/inicio.js"></script>
