--- a/src/ui/pages/inventory.html
+++ b/src/ui/pages/inventory.html
@@ -1,13 +1,10 @@
 <!-- Page Heading -->
-<h1 class="h3 mb-2 text-gray-800">Mesas</h1> 
+<h1 class="h3 mb-2 text-gray-800">Inventario</h1> 
 <p class="mb-4">
-    Listado de mesas disponibles en el establecimiento.
+    
 </p>
 <!-- DataTales Example -->
 <div class="card shadow mb-4">
-    <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary"><buttom id="create" class="btn btn-success btn-sm">Nueva</buttom></h6>
-    </div>
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-striped table-bordered dt-responsive nowrap" id="dataTable" width="100%" cellspacing="0">
@@ -15,6 +12,10 @@
                     <tr>
                         <th>ID</th>
                         <th>Nombre</th>
+                        <th>Nit</th>
+                        <th>Dirección</th>
+                        <th>Email</th>
+                        <th>Teléfono</th>
                         <th>Estado</th>
                         <th>Acciones</th>
                     </tr>
@@ -24,4 +25,6 @@
     </div>
 </div>
 
-<script src="./js/tables.js"></script>
+<!-- Page level plugins -->
+<script src="./js/sb-admin-2.min.js"></script>
+<script src="./js/suppliers.js"></script>
