--- a/src/ui/pages/cost.html
+++ b/src/ui/pages/cost.html
@@ -1,5 +1,5 @@
 <!-- Page Heading -->
-<h1 class="h3 mb-2 text-gray-800">Inventario</h1> 
+<h1 class="h3 mb-2 text-gray-800">Costos</h1> 
 <p class="mb-4">
     
 </p>
@@ -10,6 +10,7 @@
             <table class="table table-striped table-bordered dt-responsive nowrap" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
+                        <th>Fecha</th>
                         <th>Tipo</th>
                         <th>Nombre</th>
                         <th>Descripción</th>
